se corrigen cambios en la impresion